--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,1 +1,51 @@
+div#main-content {
+	margin-top: 50px; /* To handle the size of the navbar that is fixed to the top of the page */
+}
 
+.whiteText {
+	color: #FFFFFF;
+}
+
+.yellowBackground {
+	background-color: #FFCE00;
+}
+
+.lightOrangeBackground {
+	background-color: #F7A800;
+}
+
+.orangeBackground {
+	background-color: #E35205;
+}
+
+.purpleBackground {
+	background-color: #B0008E;
+}
+
+.greenBackground {
+	background-color: #77BC1F;
+}
+
+.turquoiseBackground {
+	background-color: #00C4B3; 
+}
+
+/*LARGE DEVICES*/
+@media (max-width: 1200px) {
+
+}
+
+/*MEDIUM DEVICES*/
+@media (min-width: 992px) and (max-width: 1200px) {
+	
+}
+
+/*SMALL DEVICES*/
+@media (min-width: 768px) and (max-width: 992px) {
+
+}
+
+/*EXTRA SMALL DEVICES*/
+@media (max-width: 768px) {
+
+}
